--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,13 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 Werkzeug==3.1.3
+flask-session
+flask-jwt-extended
+flask-sse
+redis
+python-dotenv
+langchain
+google-generativeai
+pydub
+numpy
+scipy
