--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.8.1",
-    "tailwind-merge": "2.5.4"
+    "tailwind-merge": "2.5.4",
+    "use-event-source": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "18.2.0",
